--- a/client/views/partials/edit-party.html
+++ b/client/views/partials/edit-party.html
@@ -32,9 +32,6 @@
                                        placeholder="Email">
                             </div>
                         </div>
-                    </div>
-                    <div class="col-xs-12 col-sm-6">
-
                         <div class="form-group col-xs-12">
                             <label for="city" class="col-xs-12 col-sm-4 pall-zero">City</label>
                             <div class="col-xs-12 col-sm-8">
@@ -51,6 +48,36 @@
                                        placeholder="Operating Lane"></div>
                         </div>
                     </div>
+                    <div class="toolbar-button-div pull-right mb-10">
+                        <button class="btn btn-blue add-trip-lane" ng-click="addTripLane()">Add Trip Lanes</button>
+                    </div>
+                    <div class="col-xs-12 col-xs-6">
+                        <form class="mt-10">
+                            <div class="col-xs-12 form-group"  ng-repeat="triplane in triplaneList track by $index">
+
+                                <div class="mb-0 ">
+                                    <div class="col-sm-4 col-xs-12 pl4-pr0">
+                                        <input ng-model="tripLane.name" type="text" class="form-control" id="name"
+                                               placeholder="Name">
+                                    </div>
+                                    <div class="col-xs-12 col-sm-4 pl4-pr0">
+                                        <input ng-model="tripLane.from" type="text" class="form-control" id="from"
+                                               placeholder="From">
+                                    </div>
+                                    <div class="col-sm-3 col-xs-12 pl4-pr0">
+                                        <input ng-model="tripLane.to" type="text" class="form-control" id="to"
+                                               placeholder="To">
+                                    </div>
+                                    <div class="col-sm-1 col-xs-12">
+                                        <button ng-show="$last" class="btn btn-custom btn-default" ng-click="deleteTripLane();"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
+                                    </div>
+                                    <div class="clearfix"></div>
+                                </div>
+                            </div>
+
+                        </form>
+
+                    </div>
                     <div class="clearfix"></div>
                     <div class="col-xs-4 col-xs-push-4">
                         <div class="alert alert-danger" role="alert" ng-show="party.error.length">
@@ -64,63 +91,15 @@
                                 <li  ng-repeat="success in party.success">{{success}}</li>
                             </ul>
                         </div>
+                        <div class="margin-top-40">
                         <input type="button" value="Submit" class="btn btn-primary" ng-click="addOrUpdateParty()"/>
                         <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
+                        </div>
                     </div>
                 </form>
             </div>
             <div class="col-xs-12">
-                <div class="toolbar-button-div pull-right mb-10">
-                    <button class="btn  btn-blue pull-right" ng-click="addTripLane()">Add Trip Lanes</button>
-                </div>
-                <form class="mt-10" ng-show="tripLaneFlag">
-                    <div class="col-xs-12 col-sm-6">
-                        <div class="form-group col-xs-12">
-                            <label for="name" class="col-sm-4 col-xs-12 pall-zero">Name</label>
-                            <div class="col-sm-8 col-xs-12">
-                                <input ng-model="tripLane.name" type="text" class="form-control" id="name"
-                                       placeholder="Name">
-                            </div>
-                        </div>
-                        <div class="form-group col-xs-12">
-                            <label for="from" class="col-sm-4 col-xs-12 pall-zero">From</label>
-                            <div class="col-xs-12 col-sm-8">
-                                <input ng-model="tripLane.from" type="text" class="form-control" id="from"
-                                       placeholder="From">
-                            </div>
-                        </div>
-
-                        <div class="form-group col-xs-12">
-                            <label class="col-sm-4 col-xs-12 pall-zero">To</label>
-                            <div class="col-sm-8 col-xs-12">
-                                <input ng-model="tripLane.to" type="text" class="form-control" id="to"
-                                       placeholder="To">
-                            </div>
-                        </div>
-
-                    <div class="text-right">
-                        <div>
-                            <div class="alert alert-danger" role="alert" ng-show="tripLane.error.length">
-                                <ul><li ng-repeat="error in tripLane.error">{{error}}</li></ul>
-                            </div>
-
-                            <div class="alert alert-success" role="alert" ng-show="tripLane.success.length">
-                                <ul><li ng-repeat="success in tripLane.success">{{success}}</li></ul>
-                            </div>
-                        </div>
-
-                        <div class="margin-top-20">
-                            <button type="submit" class="btn btn-primary" ng-click="addOrUpdateTripLane()">Submit</button>
-                            <input type="button" value="Cancel" class="btn btn-red" ng-click="cancel()"/>
-                        </div>
-                    </div>
-                    </div>
-
-                </form>
-
-
-
-                <table class="table table-bordered table-striped table-condensed table-hover" ng-table="tripLanesParams">
+                <table class="table table-bordered table-striped table-condensed table-hover hide" ng-table="tripLanesParams">
                     <tr ng-repeat="trip in currentPageOfTrips" style="text-align: center;">
                         <td data-title="'Name'" sortable="'name'" class="clickable-item col-sm-2">{{ trip.name }}</td>
                         <td data-title="'From'" sortable="'from'" class="clickable-item col-sm-3">{{ trip.from }}</td>
