--- a/client/views/partials/edit-party.html
+++ b/client/views/partials/edit-party.html
@@ -40,25 +40,25 @@
                             </div>
                         </div>
 
-                        <div class="form-group col-xs-12">
+                        <!--<div class="form-group col-xs-12">
                             <label for="operatingLane" class="col-xs-12 col-sm-4 pall-zero">Operating Lane</label>
                             <div class="col-xs-12 col-sm-8">
                                 <input ng-model="party.operatingLane" type="text" class="form-control"
                                        id="operatingLane"
                                        placeholder="Operating Lane"></div>
-                        </div>
+                        </div>-->
                     </div>
                     <div class="toolbar-button-div pull-right mb-10">
                         <button class="btn btn-blue add-trip-lane" ng-click="addTripLane()">Add Trip Lanes</button>
                     </div>
                     <div class="col-xs-12 col-xs-6">
                         <form class="mt-10">
-                            <div class="col-xs-12 form-group"  ng-repeat="triplane in triplaneList track by $index">
+                            <div class="col-xs-12 form-group"  ng-repeat="tripLane in party.tripLanes track by $index">
 
                                 <div class="mb-0 ">
                                     <div class="col-sm-4 col-xs-12 pl4-pr0">
                                         <input ng-model="tripLane.name" type="text" class="form-control" id="name"
-                                               placeholder="Name">
+                                               placeholder="Trip Lane Name">
                                     </div>
                                     <div class="col-xs-12 col-sm-4 pl4-pr0">
                                         <input ng-model="tripLane.from" type="text" class="form-control" id="from"
@@ -69,7 +69,7 @@
                                                placeholder="To">
                                     </div>
                                     <div class="col-sm-1 col-xs-12">
-                                        <button ng-show="$last" class="btn btn-custom btn-default" ng-click="deleteTripLane();"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
+                                        <button class="btn btn-custom btn-default" ng-click="deleteTripLane($index);"><i class="fa fa-minus-circle" aria-hidden="true"></i></button>
                                     </div>
                                     <div class="clearfix"></div>
                                 </div>
