Fixing some bugs

--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -89,7 +89,7 @@
                                                    class="form-control" typeahead-min-length="1"
                                                    typeahead-on-select="selectTripLane($item)"
                                                    typeahead-select-on-exact="true" typeahead-no-results="noTlane"
-                                                   placeholder="Traip Lane">
+                                                   placeholder="Traip Lane" autocomplete="false">
                                             <div class="input-group-btn ">
 
                                                 <button type="button" class="btn btn-default btn-custom" disabled><span
