--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -9,13 +9,57 @@
             <h3>Trucks</h3>
             <button class="btn btn-blue  pull-right" ng-click="goToEditTruckPage()">Add Truck</button>
 
-            <div class="margin-top-40">
-                <div class="grid" ui-grid="truckGridOptions" ></div>
-            </div>
+            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="truckParams">
+                <tr ng-repeat="trucks in currentPageOfTrucks" style="text-align: center;">
+                    <td data-title="'Reg No'" sortable="'registrationNo'" class="clickable-item col-sm-1">
+                        {{trucks.registrationNo}}
+                    </td>
+                    <td data-title="'TruckType'" sortable="'truckType'" class="clickable-item col-sm-1">{{
+                        trucks.truckType}}
+                    </td>
+                    <td data-title="'Tonnage'" sortable="'tonnage'" class="clickable-item col-sm-1">{{
+                        trucks.tonnage }}
+                    </td>
+                    <td data-title="'Permit'" sortable="'permitExpiry'" class="clickable-item col-sm-1">{{
+                        trucks.permitExpiry | date:'yyyy-MM-dd'
+                        }}
+                    </td>
+                    <td data-title="'Pollution'" sortable="'pollutionExpiry'" class="clickable-item col-sm-1">{{
+                        trucks.pollutionExpiry | date:'yyyy-MM-dd' }}
+                    </td>
+                    <td data-title="'Insurance'" sortable="'insuranceExpiry'" class="clickable-item col-sm-1">{{
+                        trucks.insuranceExpiry | date:'yyyy-MM-dd' }}
+                    </td>
+                    <td data-title="'Fitness'" sortable="'fitnessExpiry'" class="clickable-item col-sm-1">{{
+                        trucks.fitnessExpiry | date:'yyyy-MM-dd' }}
+                    </td>
+                    <td data-title="'Driver'" sortable="'fullName'" class="clickable-item col-sm-1">{{
+                        trucks.attrs.fullName }}
+                    </td>
+                    <td data-title="'Driver Num'" sortable="'mobile'" class="clickable-item col-sm-1">{{
+                        trucks.attrs.mobile }}
+                    </td>
+                    <td data-title="'Created By'" sortable="'createdByName'"
+                        class="clickable-item col-sm-1">{{ trucks.attrs.createdByName }}
+                    </td>
+                    <td data-title="'Action'" class="col-sm-2">
+                        <a href="#" class="btn" ng-click="goToEditTruckPage(trucks._id)">
+                            <span class="glyphicon glyphicon-pencil"></span></a>
+
+                        <a href="#" class="btn" ng-click="deleteTruck(trucks._id)">
+                            <span class="glyphicon glyphicon-remove"></span>
+                        </a>
+                    </td>
+                </tr>
+                <tr ng-if="!currentPageOfTrucks || currentPageOfTrucks.length === 0">
+                    <td colspan="8">No Expense Records exist.</td>
+                </tr>
+            </table>
 
 
-            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
-                boundary-link-numbers="true" rotate="false" ng-change="getTrucksData()" ng-show="totalItems > 10" ></ul>
+            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize"
+                class="pagination-sm pull-right"
+                boundary-link-numbers="true" rotate="false" ng-change="getTrucksData()" ng-show="totalItems > 10"></ul>
         </div>
     </div>
 </div>
