fixed ngTable in truck Module

--- a/client/views/partials/trucks-list.html
+++ b/client/views/partials/trucks-list.html
@@ -7,7 +7,7 @@
         <div class="main-right col-xs-9" ng-controller="TrucksController">
 
             <h3>Trucks</h3>
-            <button class="btn btn-blue  pull-right" ng-click="goToEditTruckPage()">Add Truck</button>
+            <button class="btn btn-blue pull-right mb-10" ng-click="goToEditTruckPage()">Add Truck</button>
 
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="truckParams">
                 <tr ng-repeat="trucks in currentPageOfTrucks" style="text-align: center;">
