Adding API for finding pending payments

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -99,6 +99,7 @@
 <script src="js/modules/paymentsModule.js"></script>
 <script src="js/modules/tripLanesModule.js"></script>
 <script src="js/modules/expenseMasterModule.js"></script>
+<script src="/js/modules/pendingBalanceModule.js"></script>
 
 
 </body>
