--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -6,17 +6,8 @@
         </div>
         <div class="main-right col-xs-9">
             <div class="col-xs-12 account-edit">
-                <!-- <h2 class="login-heading">{{pagetitle}}</h2>-->
-                <uib-accordion>
-                    <div uib-accordion-group class="panel-default" is-open="isFirstOpen">
-                        <uib-accordion-heading>
-                            <h4>{{pagetitle}}</h4>
-                            <i class="pull-right glyphicon acc"
-                               ng-class="{'glyphicon-chevron-down': isFirstOpen, 'glyphicon-chevron-right': !isFirstOpen}"
-                               style="top: -16px;font-size: 13px;">
-                            </i>
-                        </uib-accordion-heading>
-                        <form class="">
+                 <h2 class="login-heading">{{pagetitle}}</h2>
+                        <form class="mt-10">
                             <div class="col-sm-6 col-xs-12">
                                 <div class="form-group col-xs-12">
                                     <label class="col-sm-4 col-xs-12 pall-zero">Date</label>
@@ -29,11 +20,6 @@
                                     <label for="registrationNo" class="col-sm-4 col-xs-12 pall-zero">Vehicle
                                         No</label>
                                     <div class="col-xs-12 col-sm-8">
-                                        <!--<select ng-model="trip.registrationNo"
-                                                ng-options="truck._id as truck.registrationNo for truck in trucks"
-                                                class="form-control" id="registrationNo">
-                                        </select>-->
-                                        <div class="input-group custom-dropdown-dynamic">
 
                                             <input id="registrationNo" type="text" ng-model="truckRegNo"
                                                    uib-typeahead="truck.registrationNo for truck in trucks | filter:$viewValue"
@@ -42,7 +28,6 @@
                                                    typeahead-select-on-exact="true" placeholder="Registration Num"
                                                    typeahead-no-results="noTrucks">
 
-                                        </div>
                                         <div ng-show="noTrucks && truckRegNo.length" class="mt-5">
                                             <i class="glyphicon glyphicon-remove red"></i>
                                             <span class="red"> No Results Found </span>
@@ -54,7 +39,6 @@
                                     <label for="bookedFor" class="col-sm-4 col-xs-12  pall-zero">Party
                                     </label>
                                     <div class="col-sm-8 col-xs-12">
-                                        <div class="input-group custom-dropdown-dynamic">
                                             <input type="text" id="bookedFor" ng-model="trip.partyName"
                                                    uib-typeahead="party.name for party in parties | filter:$viewValue"
                                                    class="form-control" typeahead-min-length="1"
@@ -62,14 +46,6 @@
                                                    typeahead-select-on-exact="true" placeholder="Party"
                                                    typeahead-no-results="noBooked">
                                             {{trip.party}}
-
-                                            <div class="input-group-btn ">
-                                                <button type="button" class="btn btn-default btn-custom" disabled><span
-                                                        class="caret" ></span></button>
-                                            </div>
-                                        </div>
-
-
                                         <div ng-show="noBooked">
                                             <i class="glyphicon glyphicon-remove red"></i>
                                             <span class="red"> No Results Found </span>
@@ -83,27 +59,18 @@
                                 <div class="form-group col-xs-12">
                                     <label for="tripLane" class="col-xs-12 col-sm-4 pall-zero">Trip Lane</label>
                                     <div class="col-sm-8 col-xs-12">
-                                        <div class="input-group custom-dropdown-dynamic">
                                             <input id="tripLane" type="text" ng-model="trip.tripLane"
                                                    uib-typeahead="tripLane.name for tripLane in tripLanesList | filter:$viewValue"
                                                    class="form-control" typeahead-min-length="1"
                                                    typeahead-on-select="selectTripLane($item)"
                                                    typeahead-select-on-exact="true" typeahead-no-results="noTlane"
                                                    placeholder="Traip Lane" autocomplete="false">
-                                            <div class="input-group-btn ">
 
-                                                <button type="button" class="btn btn-default btn-custom" disabled><span
-                                                        class="caret"></span></button>
-                                            </div>
-                                        </div>
                                         <div ng-show="noTlane">
                                             <i class="glyphicon glyphicon-remove red"></i>
                                             <span class="red"> No Results Found </span>
                                         </div>
-                                        <!-- <select ng-model="trip.tripLane"
-                                                 ng-options="tripLane._id as tripLane.name for tripLane in tripLanes"
-                                                 class="form-control" id="tripLane">
-                                         </select>-->
+
                                     </div>
                                 </div>
 
@@ -160,7 +127,6 @@
                             </div>
                         </form>
                     </div>
-                </uib-accordion>
 
 
             </div>
