--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -15,26 +15,26 @@
                         {{trips.date | date:'yyyy-MM-dd'}}
                     </td>
                     <td data-title="'Reg No'" sortable="'fullName'" class="clickable-item col-sm-1">{{
-                        trips.registrationNo}}
+                        trips.attrs.truckName}}
                     </td>
                     <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item col-sm-1">{{
-                        trips.partyName }}
+                        trips.attrs.partyName }}
                     </td>
                     <td data-title="'Freight Amount'" sortable="'freightAmount'" class="clickable-item col-sm-2">{{
                         trips.freightAmount }}
                     </td>
                     <td data-title="'Trip Lane'" sortable="'tripLaneName'" class="clickable-item col-sm-2">{{
-                        trips.tripLaneName }}
+                        trips.tripLane }}
                     </td>
 
                     <td data-title="'Created By'" sortable="'createdByName'"
                         class="clickable-item col-sm-1">{{ trips.attrs.createdByName }}
                     </td>
                     <td data-title="'Action'" class="col-sm-2">
-                        <a href="#" class="btn" ng-click="goToEditDriverPage(drivers._id)">
+                        <a href="#" class="btn" ng-click="goToEditTripPage(trips._id)">
                             <span class="glyphicon glyphicon-pencil"></span></a>
 
-                        <a href="#" class="btn" ng-click="deleteDriver(drivers._id)">
+                        <a href="#" class="btn" ng-click="deleteTrip(trips._id)">
                             <span class="glyphicon glyphicon-remove"></span>
                         </a>
                     </td>
