--- a/client/views/index.html
+++ b/client/views/index.html
@@ -71,6 +71,7 @@
 <script src="components/underscore/underscore-min.js"></script>
 <script src="components/angular-ui-grid/ui-grid.min.js"></script>
 <script src="components/angular-ui-notification/dist/angular-ui-notification.js"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?key=AIzaSyC3JuGIZkNVnzrOthyMWEWf3zA0J-aui0M"></script>
 
 
 <!--app-->
@@ -100,7 +101,7 @@
 <script src="js/modules/tripLanesModule.js"></script>
 <script src="js/modules/expenseMasterModule.js"></script>
 <script src="/js/modules/pendingBalanceModule.js"></script>
-
+<script src="js/modules/trackMapModule.js"></script>
 
 </body>
 </html>
