ngtable fixed in group module and date picker changed in trips module

--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -12,7 +12,8 @@
                                 <div class="form-group col-xs-12">
                                     <label class="col-sm-4 col-xs-12 pall-zero">Date</label>
                                     <div class="col-sm-8 col-xs-12">
-                                        <date-picker id="permitExpiry" ng-model="trip.date"></date-picker>
+                                        <date-picker id="permitExpiry" ng-model="trip.date" past-present="'pastPresentDate'">
+                                        </date-picker>
                                     </div>
                                 </div>
 
