--- a/client/views/partials/groups/show-groups.html
+++ b/client/views/partials/groups/show-groups.html
@@ -7,7 +7,7 @@
 
         <div class="main-right col-xs-9" ng-controller="GroupCtrl">
             <h3>Groups</h3>
-            <button class="btn  btn-blue pull-right mb-10" ng-click="goToEditGroupPage()">Add Group</button>
+            <button class="btn btn-blue pull-right mb-10" ng-click="goToEditGroupPage()">Add Group</button>
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="groupParams">
                 <tr ng-repeat="groups in currentPageOfGroups" style="text-align: center;">
 
@@ -15,7 +15,7 @@
                         groups.userName}}
                     </td>
                     <td data-title="'Group Name'" sortable="'name'" class="clickable-item col-sm-2">{{
-                        users.name }}
+                        groups.name }}
                     </td>
 
                     <td data-title="'Created By'" sortable="'createdByName'"
