--- a/client/views/partials/party-list.html
+++ b/client/views/partials/party-list.html
@@ -6,14 +6,41 @@
         </div>
         <div class="main-right col-xs-9">
             <h3>Party</h3>
-            <button class="btn  btn-blue  pull-right" ng-click="goToEditPartyPage()">Add Party</button>
+            <button class="btn btn-blue pull-right mb-10" ng-click="goToEditPartyPage()">Add Party</button>
+            <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
+                <tr ng-repeat="parties in currentPageOfParties" style="text-align: center;">
 
-            <div class="margin-top-40">
-                <div class="grid" ui-grid="partyGridOptions"></div>
-            </div>
+                    <td data-title="'Party Name'" sortable="'name'" class="clickable-item col-sm-2">{{
+                        parties.name}}
+                    </td>
+                    <td data-title="'Contact'" sortable="'contact'" class="clickable-item col-sm-2">{{
+                        parties.contact }}
+                    </td>
+                    <td data-title="'Email'" sortable="'email'" class="clickable-item col-sm-2">{{
+                        parties.email }}
+                    </td>
+                    <td data-title="'City'" sortable="'city'" class="clickable-item col-sm-2">{{
+                        parties.city }}
+                    </td>
+                    <td data-title="'Triplanes'" sortable="'tripLanes'" class="clickable-item col-sm-1">{{
+                        parties.tripLanes.length }}
+                    </td>
 
-            <ul uib-pagination total-items="totalItems" ng-model="pageNumber" max-size="maxSize" class="pagination-sm pull-right"
-                boundary-link-numbers="true" rotate="false" ng-change="getParties()" ng-show="totalItems > 10"></ul>
+                    <td data-title="'Created By'" sortable="'createdByName'"
+                        class="clickable-item col-sm-1">{{ parties.attrs.createdByName }}
+                    </td>
+                    <td data-title="'Action'" class="col-sm-2">
+                        <a href="#" class="btn" ng-click="goToEditPartyPage(parties._id)">
+                            <span class="glyphicon glyphicon-pencil"></span></a>
+                        <a href="#" class="btn" ng-click="deleteParty(parties._id)">
+                            <span class="glyphicon glyphicon-remove"></span></a>
+                    </td>
+                </tr>
+                <tr ng-if="!currentPageOfParties || currentPageOfParties.length === 0">
+                    <td colspan="8"> Party Records not found.</td>
+                </tr>
+            </table>
+
         </div>
     </div>
 </div>
