--- a/client/views/index.html
+++ b/client/views/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" type="text/css" href="components/angular-ui-grid/ui-grid.min.css">
     <link rel="stylesheet" type="text/css"
           href="components/angular-ui-notification/dist/angular-ui-notification.min.css">
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCqfdUArIBiMYTVVe0RJeH6yTtZQQXerhA&callback=initMap"
-            type="text/javascript"></script>
+    <link href="https://fonts.googleapis.com/css?family=Exo+2" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="stylesheet" href="js/lib/bundles/ng-table.css">
 </head>
