--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -44,6 +44,7 @@
                     <td colspan="8">No Expense Records exist.</td>
                 </tr>
             </table>
+            <div class="clearfix"></div>
         </div>
     </div>
 </div>
