--- a/client/views/partials/drivers/driversList.html
+++ b/client/views/partials/drivers/driversList.html
@@ -11,7 +11,7 @@
             <div>
                 <button class="btn btn-blue pull-right mb-10" ng-click="goToEditDriverPage()">Add Driver</button>
             </div>
-
+            <div >
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="driverParams">
                 <tr ng-repeat="drivers in currentPageOfDrivers" style="text-align: center;">
                     <td data-title="'Driver ID'" sortable="'driverId'" class="clickable-item col-sm-1">
@@ -52,6 +52,9 @@
                     <td colspan="8">No drivers Records exist.</td>
                 </tr>
             </table>
+            </div>
+            <div class="clearfix"></div>
+
         </div>
     </div>
 </div>
