--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -11,10 +11,10 @@
 
             <table class="table table-bordered table-striped table-condensed table-hover" ng-table="tripParams">
                 <tr ng-repeat="trips in currentPageOfTrips" style="text-align: center;">
-                    <td data-title="'Trip Date'" sortable="'driverId'" class="clickable-item col-sm-1">
+                    <td data-title="'Trip Date'" sortable="'date'" class="clickable-item col-sm-1">
                         {{trips.date | date:'yyyy-MM-dd'}}
                     </td>
-                    <td data-title="'Reg No'" sortable="'fullName'" class="clickable-item col-sm-1">{{
+                    <td data-title="'Reg No'" sortable="'truckName'" class="clickable-item col-sm-1">{{
                         trips.attrs.truckName}}
                     </td>
                     <td data-title="'Party Name'" sortable="'partyName'" class="clickable-item col-sm-1">{{
@@ -23,7 +23,7 @@
                     <td data-title="'Freight Amount'" sortable="'freightAmount'" class="clickable-item col-sm-2">{{
                         trips.freightAmount }}
                     </td>
-                    <td data-title="'Trip Lane'" sortable="'tripLaneName'" class="clickable-item col-sm-2">{{
+                    <td data-title="'Trip Lane'" sortable="'tripLane'" class="clickable-item col-sm-2">{{
                         trips.tripLane }}
                     </td>
 
