--- a/client/views/partials/trips/tripsEdit.html
+++ b/client/views/partials/trips/tripsEdit.html
@@ -7,7 +7,7 @@
         <div class="main-right col-xs-9">
             <div class="col-xs-12 account-edit">
                 <h2 class="login-heading">{{pagetitle}}</h2>
-                <form class="mt-10">
+                <form class="mt-10" autocomplete="off">
                     <div class="col-sm-6 col-xs-12">
                         <div class="form-group col-xs-12">
                             <label class="col-sm-4 col-xs-12 pall-zero">Date</label>
